[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/npcGetItemNode.gd" type="Script" id=1]

[node name="playerGetItemNode" type="GraphNode"]
margin_top = -1.0
margin_right = 432.0
margin_bottom = 83.0
title = "Npc get item node"
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="Label2" type="Label" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 416.0
margin_bottom = 38.0
text = "Message"
align = 1

[node name="message" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 38.0
margin_right = 416.0
margin_bottom = 58.0
rect_min_size = Vector2( 0, 20 )

[node name="Label" type="Label" parent="."]
margin_left = 16.0
margin_top = 59.0
margin_right = 416.0
margin_bottom = 73.0
text = "Item to give to npc"
align = 1

[node name="itemToGetFromNpc" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 74.0
margin_right = 416.0
margin_bottom = 94.0
rect_min_size = Vector2( 0, 20 )
[connection signal="close_request" from="." to="." method="_on_npcGetItemNode_close_request"]
[connection signal="resize_request" from="." to="." method="_on_npcGetItemNode_resize_request"]
